# Explain-My-Config

./: LICENSE  README.md
CLI/explain-my-config/: LICENSE  README.md  pyproject.toml
CLI/explain-my-config/explain_my_config/: __init__.py  cli.py  explainer.py  parser.py  utils.py
CLI/explain-my-config/explain_my_config.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
CLI/explain-my-config/tests/: sample.env  sample.json  sample.yaml
